Fixed contents panel z-index

--- a/resources/c/common.sass
+++ b/resources/c/common.sass
@@ -69,6 +69,8 @@ ul
   top: 0
   right: 4vw
   z-index: 1
+  &:hover
+    z-index: 1
 
 .button
   border: 1px solid black
