--- a/resources/c/partial/single_issue.sass
+++ b/resources/c/partial/single_issue.sass
@@ -3,11 +3,11 @@
 //  width: inherit
 .cover-panel
   width: 35rem
-  height: 54rem
+  height: 59rem
   background-color: $panel-color
 
   display: block
-  position: fixed
+  position: absolute
   margin-top: 5rem
   left: 15vw
   text-align: center
